<resources>
    <string name="app_name">Civil Advocacy</string>
    <string name="title_activity_civic_details">CivicDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="address">Address :</string>
    <string name="website">Website:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="todo">TODO</string>
    <string name="twitter_link">Twitter_Link</string>
    <string name="party_icon">party_Icon</string>
    <string name="facebook_link">facebook_Link</string>
    <string name="youtube_link">youtube_Link</string>
    <string name="NetworkDescription">Data cannot be accessed/loaded without an internet connection.</string>
    <string name="Network_Message">NO NETWORK CONNECTION</string>
</resources>