<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CivicDetailScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Civic_Detail_Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CivicDetails">

        <TextView
            android:id="@+id/CivicLocation"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="#993399"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Official_Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Civic Location" />

        <TextView
            android:id="@+id/Civic_Position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/Official_Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Civic_Name"
            tools:text="Official Position" />

        <TextView
            android:id="@+id/Civic_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/Official_Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CivicLocation"
            tools:ignore="TextContrastCheck"
            tools:text="Official Name" />

        <TextView
            android:id="@+id/Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Official_Image" />

        <TextView
            android:id="@+id/Address_Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Address"
            tools:text="831S,BishopStreet,Chicago,Illinois,60607" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="69dp"
            android:layout_height="31dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Address_Info" />

        <TextView
            android:id="@+id/Phone_Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Phone"
            tools:text="+13122167043" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Phone_Info" />

        <TextView
            android:id="@+id/Email_Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.289"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            tools:text="satyaadd22@gmail.com" />

        <TextView
            android:id="@+id/Website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email_Info" />

        <TextView
            android:id="@+id/Website_Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Website"
            tools:text="www.google.com" />

        <ImageView
            android:id="@+id/facebookButton"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/facebook_link"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PartyName"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/youtubeButton"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/youtube_link"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/twitterButton"
            app:layout_constraintStart_toEndOf="@+id/facebookButton"
            app:layout_constraintTop_toBottomOf="@+id/PartyName"
            app:srcCompat="@drawable/youtube"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/twitterButton"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/twitter_link"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/Official_Image"
            app:layout_constraintTop_toBottomOf="@+id/PartyName"
            app:srcCompat="@drawable/twitter"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/Official_Image"
            android:layout_width="149dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CivicLocation"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/Party_Icon"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginBottom="-10dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/Official_Image"
            app:layout_constraintEnd_toEndOf="@+id/Official_Image"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="@+id/Official_Image"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/PartyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Civic_Position"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Civic_Position"
            tools:text="Party Name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>